--- a/package.json
+++ b/package.json
@@ -78,5 +78,20 @@
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
-  }
+  },
+  "description": "*Automatically synced with your [v0.dev](https://v0.dev) deployments*",
+  "main": "server.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Darshan-Patel25/rewear-platform.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Darshan-Patel25/rewear-platform/issues"
+  },
+  "homepage": "https://github.com/Darshan-Patel25/rewear-platform#readme"
 }
